--- a/ExceptionHandling.ConsoleApp/ExceptionHandling.ConsoleApp.csproj
+++ b/ExceptionHandling.ConsoleApp/ExceptionHandling.ConsoleApp.csproj
@@ -7,4 +7,15 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="NLog" Version="5.2.0" />
+    <PackageReference Include="NLog.Schema" Version="5.2.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="NLog.config">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
+  </ItemGroup>
+
 </Project>
