--- a/Bookstore.ConsoleApp/NLog.config
+++ b/Bookstore.ConsoleApp/NLog.config
@@ -9,7 +9,7 @@
 	<!-- optional, add some variables
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
   -->
-	<variable name="myvar" value="myvalue"/>
+	<variable name="myvar" value="myvalue" />
 
 	<!--
   See https://github.com/nlog/nlog/wiki/Configuration-file
@@ -20,8 +20,7 @@
 		<target xsi:type="File"
 				name="info"
 				fileName="${basedir}/logs/info/${shortdate}.log"
-				layout="${longdate} ${uppercase:${level}} ${message}"
-				/>
+				layout="${longdate} ${uppercase:${level}} ${message}" />
 
 		<!--
     add your targets here
