--- a/ExceptionHandling.ConsoleApp/NLog.config
+++ b/ExceptionHandling.ConsoleApp/NLog.config
@@ -9,7 +9,7 @@
 	<!-- optional, add some variables
   https://github.com/nlog/NLog/wiki/Configuration-file#variables
   -->
-	<variable name="myvar" value="myvalue"/>
+	<variable name="myvar" value="myvalue" />
 
 	<!--
   See https://github.com/nlog/nlog/wiki/Configuration-file
@@ -17,17 +17,15 @@
    -->
 	<targets>
 
-		<target xsi:type="File" 
-				name="error" 
+		<target xsi:type="File"
+				name="error"
 				fileName="${basedir}/logs/errors/${shortdate}.log"
-				layout="${longdate} ${uppercase:${level}} ${message}" 
-				/>
+				layout="${longdate} ${uppercase:${level}} ${message}" />
 
 		<target xsi:type="File"
 				name="info"
 				fileName="${basedir}/logs/info/${shortdate}.log"
-				layout="${longdate} ${uppercase:${level}} ${message}"
-				/>
+				layout="${longdate} ${uppercase:${level}} ${message}" />
 
 		<!--
     add your targets here
@@ -43,16 +41,16 @@
 	</targets>
 
 	<rules>
-		
-		<logger name="*" 
-				minlevel="Error" 
+
+		<logger name="*"
+				minlevel="Error"
 				writeTo="error" />
 
 		<logger name="*"
 				minlevel="Info"
 				maxlevel="Warn"
 				writeTo="info" />
-		
+
 		<!-- add your logging rules here -->
 
 		<!--
