--- a/ExceptionHandling.ConsoleApp/ExceptionHandling.ConsoleApp.csproj
+++ b/ExceptionHandling.ConsoleApp/ExceptionHandling.ConsoleApp.csproj
@@ -4,12 +4,12 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+    <Nullable>disable</Nullable>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="NLog" Version="5.2.6" />
-    <PackageReference Include="NLog.Schema" Version="5.2.6" />
+    <PackageReference Include="NLog" Version="5.3.2" />
+    <PackageReference Include="NLog.Schema" Version="5.3.2" />
   </ItemGroup>
 
   <ItemGroup>
