--- a/Bookstore.ConsoleApp/appsettings.json
+++ b/Bookstore.ConsoleApp/appsettings.json
@@ -1,3 +1,3 @@
 {
-  "ConnectionString": "Server=(local)\\SQLEXPRESS;Database=DbName;User Id=DBUser;Password=1234;TrustServerCertificate=True;"
+  "ConnectionString": "Server=(local)\\SQLEXPRESS;Database=DbName;User Id=DBUser;Password=;TrustServerCertificate=True;"
 }
